# windows_reinstall

./: .gitattributes  Cargo.toml  README.md  github_language.rs  win_instalation.md
automation_tasks_rs/src/: main.rs
configuration_files/: vscode_settings.json
configuration_files/debian_files/: .bashrc
configuration_files/debian_files/.ssh/: sshadd.sh  the keys are in encrypted vault.txt
configuration_files/debian_files/rustprojects/cli_google_auth_from_exported_qr_jpg/: gajpg
configuration_files/win_c_Users_luciano/: .gitconfig  .gitconfig-GuitaraokeLeader  .gitconfig-bestia-dev
configuration_files/win_c_Users_luciano/.config/wezterm/: cd_wezterm.txt  wezterm.lua
configuration_files/win_c_Users_luciano/AppData/Roaming/Notepad++/: cd_notepad.txt  config.xml
configuration_files/win_c_Users_luciano/AppData/Roaming/Notepad++/themes/: DarkVSCodeTheme.xml  Mono Industrial.xml
configuration_files/win_c_Users_luciano/Desktop/: Firefox.lnk  TotalCmd.lnk  Visual Studio Code.lnk  Wsl-Debian.lnk  cd_desktop.txt  desktop.ini  git-bash.lnk
configuration_files/win_files/c/Program Files/totalcmd/: README.md
configuration_files/win_files/c/Program Files/totalcmd/plugins/: plugins.md
configuration_files/win_files/c/Users/luciano/: .bashrc  .gitconfig
images/: container_rust_dev_cnt_github_v1.puml  container_rust_dev_cnt_github_v2.plantuml  container_rust_dev_cnt_github_v3.plantuml  folder_bestiadev_github_v1.plantuml  folder_bestiadev_github_v2.plantuml  folder_bestiadev_github_v3.plantuml  folder_bestiadev_github_v4.plantuml
tmp/: temp10.txt
(+50 files in other folders)
